1.3
-- Fixed error in PG10 queries file. 
-- Moved connection stats query from common to version specific queries due to PG10 differences. Clarified naming of files for which versions they work for.
-- Added dropdown for the Job to the lower level drill down dashboards in Grafana. Allows selecting of a specific system from the dashboard itself without having to click through on a higher level.
-- Removed pg_stat_statements graph from PostgreSQLDetails dashboard. Needs refinement to make it more useful.


1.2
-- Change service and sysconfig files to use single OPT environment variable instead of one variable per cmd option
-- Fix error in PG10 monitoring functions file
-- Initial version of Prometheus 2.0 job deletion script. Requires API call not available yet in 2.0.0 for full functionality


1.1
-- Implement rpmnew/rpmsave feature instead of using .example files to prevent package overwriting user changes to configs


1.0
-- Initial stable release